--- a/pb_hooks/pages/+layout.ejs
+++ b/pb_hooks/pages/+layout.ejs
@@ -19,13 +19,14 @@
     <link href="<%=asset('/app.css')%>" rel="stylesheet" />
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <%- datastar.scripts({ realtime: true }) %>
   </head>
-  <body>
-    <div class="drawer">
+  <body class="min-h-screen">
+    <div class="drawer min-h-screen">
       <input id="my-drawer-3" type="checkbox" class="drawer-toggle" />
-      <div class="drawer-content flex flex-col">
+      <div class="drawer-content flex flex-col min-h-screen">
         <!-- Navbar -->
-        <div class="navbar bg-base-300 w-full">
+        <div class="navbar bg-base-300 w-full flex-shrink-0">
           <div class="flex-none lg:hidden">
             <label
               for="my-drawer-3"
@@ -78,7 +79,7 @@
             </ul>
           </div>
         </div>
-        <main class="flex-1 p-4 bg-base-100"><%- slot %></main>
+        <main id="main-content" class="flex-1 p-4 bg-base-100"><%- slot %></main>
       </div>
       <div class="drawer-side">
         <label
