--- a/pb_hooks/pages/dashboard/_private/accruals_all_with_status.ejs
+++ b/pb_hooks/pages/dashboard/_private/accruals_all_with_status.ejs
@@ -1093,7 +1093,7 @@ try {
 				</label>
 				<input 
 					type="text" 
-					data-bind="$addAccrualName"
+					data-bind="addAccrualName"
 					class="input input-bordered w-full" 
 					placeholder="Название начисления"
 					required />
@@ -1106,7 +1106,7 @@ try {
 				</label>
 				<input 
 					type="text" 
-					data-bind="$addAccrualNumber"
+					data-bind="addAccrualNumber"
 					class="input input-bordered w-full" 
 					placeholder="Номер документа" />
 			</div>
@@ -1118,7 +1118,7 @@ try {
 						<span class="label-text">Партнёр <span class="text-error">*</span></span>
 					</label>
 					<select 
-						data-bind="$addAccrualPartner"
+						data-bind="addAccrualPartner"
 						class="select select-bordered w-full"
 						required>
 						<option value="">Выберите партнёра</option>
@@ -1134,7 +1134,7 @@ try {
 						<span class="label-text">Статья расходов <span class="text-error">*</span></span>
 					</label>
 					<select 
-						data-bind="$addAccrualCostItem"
+						data-bind="addAccrualCostItem"
 						class="select select-bordered w-full"
 						required>
 						<option value="">Выберите статью</option>
@@ -1153,7 +1153,7 @@ try {
 					</label>
 					<input 
 						type="number" 
-						data-bind="$addAccrualSum"
+						data-bind="addAccrualSum"
 						class="input input-bordered w-full" 
 						placeholder="0.00"
 						step="0.01"
@@ -1168,7 +1168,7 @@ try {
 					</label>
 					<input 
 						type="date" 
-						data-bind="$addAccrualRepaymentDate"
+						data-bind="addAccrualRepaymentDate"
 						class="input input-bordered w-full"
 						required />
 				</div>
@@ -1180,7 +1180,7 @@ try {
 					<span class="label-text">Описание</span>
 				</label>
 				<textarea 
-					data-bind="$addAccrualDescription"
+					data-bind="addAccrualDescription"
 					class="textarea textarea-bordered w-full" 
 					rows="3"
 					placeholder="Дополнительная информация"></textarea>
@@ -1211,7 +1211,6 @@ try {
 	</div>
 </div>
 
-<!-- Модальное окно для редактирования начисления -->
 <!-- Модальное окно для редактирования начисления (Datastar) -->
 <div data-show="$showEditAccrualModal" data-class="{'modal-open': $showEditAccrualModal}" class="modal">
 	<div class="modal-box max-w-2xl">
@@ -1227,7 +1226,8 @@ try {
 				</label>
 				<input 
 					type="text" 
-					data-bind="$editAccrualName"
+					data-bind="editAccrualName"
+					data-attr:value="$editAccrualName"
 					class="input input-bordered w-full" 
 					placeholder="Название начисления"
 					required />
@@ -1240,7 +1240,8 @@ try {
 				</label>
 				<input 
 					type="text" 
-					data-bind="$editAccrualNumber"
+					data-bind="editAccrualNumber"
+					data-attr:value="$editAccrualNumber"
 					class="input input-bordered w-full" 
 					placeholder="Номер документа" />
 			</div>
@@ -1252,7 +1253,8 @@ try {
 						<span class="label-text">Партнёр <span class="text-error">*</span></span>
 					</label>
 					<select 
-						data-bind="$editAccrualPartner"
+						data-bind="editAccrualPartner"
+						data-attr:value="$editAccrualPartner"
 						class="select select-bordered w-full"
 						required>
 						<option value="">Выберите партнёра</option>
@@ -1268,7 +1270,8 @@ try {
 						<span class="label-text">Статья расходов <span class="text-error">*</span></span>
 					</label>
 					<select 
-						data-bind="$editAccrualCostItem"
+						data-bind="editAccrualCostItem"
+						data-attr:value="$editAccrualCostItem"
 						class="select select-bordered w-full"
 						required>
 						<option value="">Выберите статью</option>
@@ -1287,7 +1290,8 @@ try {
 					</label>
 					<input 
 						type="number" 
-						data-bind="$editAccrualSum"
+						data-bind="editAccrualSum"
+						data-attr:value="$editAccrualSum"
 						class="input input-bordered w-full" 
 						placeholder="0.00"
 						step="0.01"
@@ -1302,7 +1306,8 @@ try {
 					</label>
 					<input 
 						type="date" 
-						data-bind="$editAccrualRepaymentDate"
+						data-bind="editAccrualRepaymentDate"
+						data-attr:value="$editAccrualRepaymentDate"
 						class="input input-bordered w-full"
 						required />
 				</div>
@@ -1314,7 +1319,8 @@ try {
 					<span class="label-text">Описание</span>
 				</label>
 				<textarea 
-					data-bind="$editAccrualDescription"
+					data-bind="editAccrualDescription"
+					data-text="$editAccrualDescription"
 					class="textarea textarea-bordered w-full" 
 					rows="3"
 					placeholder="Дополнительная информация"></textarea>
@@ -1325,7 +1331,8 @@ try {
 				<label class="label cursor-pointer justify-start gap-2">
 					<input 
 						type="checkbox" 
-						data-bind="$editAccrualForcedClosure"
+						data-bind="editAccrualForcedClosure"
+						data-attr:checked="$editAccrualForcedClosure"
 						class="checkbox checkbox-primary" />
 					<span class="label-text">Принудительно закрыть</span>
 				</label>
@@ -1526,7 +1533,7 @@ try {
 				</label>
 				<input 
 					type="text" 
-					data-bind="$addWaitIncomeName"
+					data-bind="addWaitIncomeName"
 					placeholder="Например: ООО Рога и копыта"
 					class="input input-bordered w-full" 
 					required />
@@ -1540,7 +1547,7 @@ try {
 				<div class="join w-full">
 					<input 
 						type="number" 
-						data-bind="$addWaitIncomeSum"
+						data-bind="addWaitIncomeSum"
 						placeholder="100000"
 						step="0.01"
 						min="0"
@@ -1560,7 +1567,7 @@ try {
 				</label>
 				<input 
 					type="month" 
-					data-bind="$addWaitIncomeMonth"
+					data-bind="addWaitIncomeMonth"
 					class="input input-bordered w-full" 
 					required />
 			</div>
@@ -1607,7 +1614,7 @@ try {
 				</label>
 				<input 
 					type="text" 
-					data-bind="$editWaitIncomeName"
+					data-bind="editWaitIncomeName"
 					placeholder="Например: ООО Рога и копыта"
 					class="input input-bordered w-full" 
 					required />
@@ -1621,7 +1628,7 @@ try {
 				<div class="join w-full">
 					<input 
 						type="number" 
-						data-bind="$editWaitIncomeSum"
+						data-bind="editWaitIncomeSum"
 						placeholder="100000"
 						step="0.01"
 						min="0"
@@ -1641,7 +1648,7 @@ try {
 				</label>
 				<input 
 					type="month" 
-					data-bind="$editWaitIncomeMonth"
+					data-bind="editWaitIncomeMonth"
 					class="input input-bordered w-full" 
 					required />
 			</div>
@@ -1707,7 +1714,7 @@ try {
 					<div class="join w-full">
 						<input 
 							type="number" 
-							data-bind="$manualPaymentSum"
+							data-bind="manualPaymentSum"
 							placeholder="0.00"
 							step="0.01"
 							min="0.01"
@@ -1724,7 +1731,7 @@ try {
 					</label>
 					<input 
 						type="date" 
-						data-bind="$manualPaymentDate"
+						data-bind="manualPaymentDate"
 						class="input input-bordered w-full" 
 						required />
 				</div>
@@ -1736,7 +1743,7 @@ try {
 					<span class="label-text">Описание</span>
 				</label>
 				<textarea 
-					data-bind="$manualPaymentDescription"
+					data-bind="manualPaymentDescription"
 					class="textarea textarea-bordered w-full" 
 					rows="2"
 					placeholder="Дополнительная информация о платеже"></textarea>
